2009-02-07  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/rpc_common.c: We cannot move _null_auth into .rodata that
	easily.

	* malloc/malloc.c: Add branch prediction for use of the hooks.

	* grp/compat-initgroups.c [NOT_IN_libc] (__libc_use_alloca): Define.

2009-02-06  Ulrich Drepper  <drepper@redhat.com>

	[BZ #7095]
	* bits/confname.h: Add SUSv7 macros for getconf environments.
	* bits/environments.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/environments.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/environments.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/environments.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/environments.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/environments.h: Likewise.
	* posix/confstr.c: Handle SUSv5 and SUSv7 environments.
	* posix/getconf.c: Likewise.
	* posix/sysconf.c: Likewise.
	* sysdeps/posix/sysconf.c: Likewise.
	* posix/Makefile (getconf.speclist): Also collect SUSv5 and SUSv7
	environments.

2009-01-16  Petr Baudis  <pasky@suse.cz>

	[BZ #9753]
	* resolv/res_libc.c (__res_maybe_init): Call __res_vinit()
	even if we currently have zero nscount.

2009-02-06  Ulrich Drepper  <drepper@redhat.com>

	[BZ #9781]
	* grp/compat-initgroups.c (compat_call): Switch to use malloc when
	the input line is too long.

	* po/Makefile (libc.pot): Add f_print as function taking c-format
	parameter.

	* debug/xtrace.sh: Unify translatable messages.
	* elf/ldd.bash.in: Likewise.
	* elf/sprof.c: Likewise.
	* locale/programs/locale.c: Likewise.
	* malloc/memusage.sh: Likewise.
	* nss/getent.c: Likewise.

2009-02-06  Joseph Myers  <joseph@codesourcery.com>

	* debug/pcprofiledump.c (print_version,
	argp_program_version_hook): New function.
	* elf/ldconfig.c (more_help): New function.
	(argp): Use it.
	* elf/sln.c (usage): New function.
	(main): Support --help and --version.
	* malloc/memusagestat.c (print_version): New function.
	(argp_program_version_hook): New variable.
	* nscd/nscd.c (more_help): New function.