@@ -1,5 +1,14 @@
 2009-02-07  Ulrich Drepper  <drepper@redhat.com>
 
+	* malloc/malloc.c (_int_free): Second argument is now mchunkptr.
+	Change all callers.
+	(_int_realloc): Likewise.
+	All _int_* functions are now static.
+	* malloc/hooks.c: Change all callers to _int_free and _int_realloc.
+	* malloc/arena.c: Likewise.
+	* include/malloc.h: Remove now unnecessary declarations of the _int_*
+	functions.
+
 	* sunrpc/rpc_common.c: We cannot move _null_auth into .rodata that
 	easily.
 
